# zoli-shake

./: zoli-shake.cabal
examples/c/: .gitignore  build.hs
examples/c/src/: a.c
src/: Zoli.hs
src/Zoli/: Cmd.hs  Core.hs  FileUtils.hs  Pattern.hs  Run.hs
